--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development",
-    "test": "test"
+    "test": "test",
+    "build": "webpack --mode production",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -19,7 +22,7 @@
   "bugs": {
     "url": "https://github.com/Digitalk14/ui-kit/issues"
   },
-  "homepage": "https://github.com/Digitalk14/ui-kit#readme",
+  "homepage": "https://Digitalk14.github.io/ui-kit-akmid",
   "dependencies": {
     "linaria": "^4.1.3",
     "react": "^18.2.0",
@@ -34,7 +37,9 @@
     "@types/react-dom": "^18.0.6",
     "babel-loader": "^8.2.5",
     "eslint": "^8.24.0",
-    "prettier": "^2.7.1",
+    "gh-pages": "^4.0.0",
+    "html-webpack-plugin": "^5.5.0",
+    "prettier": "2.7.1",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.3",
     "webpack": "^5.74.0",
